--- a/guide.html
+++ b/guide.html
@@ -9,7 +9,7 @@ are a moron. It doesn't work.</p>
 <h4>2. Not everyone is using your computer.</h4>
 <p>There are a wide variety of displays these days used in a wide variety of lighting conditions.</p>
 <p>Take any two random devices.  Put your grey-on-grey text website up against it.  Look at the two devices.  See how the greys are strikingly different?  One of them is bluer, or greener, or lighter, or darker.  The contrast ratio between the black and white are different?</p>
-<p>There's no agreed metric for contrast ratio amongst vendors.  The 10,000:1 numbers are only good within the vendor itself.  Furthermore, if the blacks are too bright, then this diffuses the focus for the reader.  I could cite things for you, but use google, really man, I'm not going to do all the legwork.</p>
+<p>There's no agreed metric for contrast ratio amongst vendors.  The 10,000:1 numbers are only good within the vendor itself.</p>
 
 <h4>3. Not everyone is using your operating system.</h4>
 <p>Sub-pixel font aliasing engines differ for each browser and platform.  Things that look good in one combination may look terrible in all others.  This goes back to the most basic fundamental rule of making webpages:</p>
@@ -19,6 +19,7 @@ are a moron. It doesn't work.</p>
 <h4>4. Not everyone is a fresh-faced 19 year old</h4>
 <p>People have varying degrees of dyslexia which mean that reading for some requires much greater concentration than reading for others.</p>
 <p>The problem is that if a bunch of concentration is exhausted to interpret the hairline grey flicks you call letters, then there's not much left to be spent on trying to understand what you've written with it.</p>
+<p>Don't believe me? Well fuck you, you're wrong. Here's an <a href="http://www.radiolab.org/story/301401-inner-voices/">hour long radio show</a> explaining it. And if that wasn't clear enough for you <a href="https://www.youtube.com/watch?v=dFs9WO2B8uI&list=PL39BF9545D740ECFF&index=5">here's a youtube video of someone drawing pictures explaining it</a>. Still not enough? <a href=https://csusm-dspace.calstate.edu/handle/10211.3/114688>Here's a fucking thesis work on it</a>. Poor legibility decreases overall comprehension. This isn't rocket-science.
 
 <h3>Legibility is your top goal for content. Period. End of story.</h3>
 <p>So we have the following realities:</p>
