--- a/guide.html
+++ b/guide.html
@@ -19,7 +19,7 @@ are a moron. It doesn't work.</p>
 <h4>4. Not everyone is a fresh-faced 19 year old</h4>
 <p>People have varying degrees of dyslexia which mean that reading for some requires much greater concentration than reading for others.</p>
 <p>The problem is that if a bunch of concentration is exhausted to interpret the hairline grey flicks you call letters, then there's not much left to be spent on trying to understand what you've written with it.</p>
-<p>Don't believe me? Well fuck you, you're wrong. Here's an <a href="http://www.radiolab.org/story/301401-inner-voices/">hour long radio show</a> explaining it. And if that wasn't clear enough for you <a href="https://www.youtube.com/watch?v=dFs9WO2B8uI&list=PL39BF9545D740ECFF&index=5">here's a youtube video of someone drawing pictures explaining it</a>. Still not enough? <a href=https://csusm-dspace.calstate.edu/handle/10211.3/114688>Here's a fucking thesis work on it</a>. Poor legibility decreases overall comprehension. This isn't rocket-science.
+<p>Don't believe me? Well fuck you, you're wrong. Here's an <a href="http://www.radiolab.org/story/301401-inner-voices/">hour long radio show</a> explaining it. Still not enough? <a href=https://csusm-dspace.calstate.edu/handle/10211.3/114688>Here's a fucking thesis work on it</a>. Poor legibility decreases overall comprehension. This isn't rocket-science.
 
 <h3>Legibility is your top goal for content. Period. End of story.</h3>
 <p>So we have the following realities:</p>
