--- a/unfuckupify.html
+++ b/unfuckupify.html
@@ -1,3 +1,3 @@
 (function(){
-var ss = document.body.appendChild(document.createElement('link'));ss.setAttribute('rel','stylesheet');ss.setAttribute('href','http://unreadable.website/unfuckipify.css');
+var ss = document.body.appendChild(document.createElement('link'));ss.setAttribute('rel','stylesheet');ss.setAttribute('href','//unreadable.website/unfuckipify.css');
 })();
