--- a/higher_contrast.html
+++ b/higher_contrast.html
@@ -15,6 +15,6 @@
 
 <p>Plugins are way too hard.  Really what there needs to be is a button that runs this.  For now, just copy and paste this into your console when you need it:</p>
 
-<code>document.body.appendChild(document.createElement('link')).href='//unreadable.website/unfuckupify.css'</code>
+<h3><code>(function(){var m=document.body.appendChild(document.createElement('link'));m.rel='stylesheet';m.href='//unreadable.website/unfuckupify.css'})();</code></h3>
 
 <p>Ah, it makes life so much better. I can read shit.</p>
