--- a/guide.html
+++ b/guide.html
@@ -1,25 +1,21 @@
-<h3>So you want to make readable websites?</h3>
-<p>Luckily this process is easy!</p>
+<h1>A More Readable Web!</h1>
+<p>What's wrong with low contrast?</p>
 
 <h4>1. The primary argument for grey text is invalid</h4>
-<p>Some people think that grey text looks closer to print. Although they may be correct, print doesn't have a backlight or a shiny glare,</p>
-<p>Trying to make light emitted from an array of IPS LEDs abstractly mock dyed paper to increase legibility is a complete joke.  If you do this, you
-are a moron. It doesn't work.</p>
+<p>Some say that grey text looks closer to print. However print doesn't have a backlight or shiny glare,</p>
+<p>Trying to make light emitted from an array of IPS LEDs abstractly mock dyed paper to increase legibility is a complete joke. The abstraction is wrong.</p>  
 
 <h4>2. Not everyone is using your computer.</h4>
 <p>There are a wide variety of displays these days used in a wide variety of lighting conditions.</p>
-<p>Take any two random devices.  Put your grey-on-grey text website up against it.  Look at the two devices.  See how the greys are strikingly different?  One of them is bluer, or greener, or lighter, or darker.  The contrast ratio between the black and white are different?</p>
-<p>There's no agreed metric for contrast ratio amongst vendors.  The 10,000:1 numbers are only good within the vendor itself.</p>
+<p>Take any two random devices and put your grey-on-grey text website up against it.  See how the greys are strikingly different?  One of them is bluer, or greener, or lighter, or darker.  Notice how the contrast ratio between the black and white are different? Want to increase your convergence? Lower your bounce rate? Get those engagement numbers up? These are important details!</p>
 
 <h4>3. Not everyone is using your operating system.</h4>
 <p>Sub-pixel font aliasing engines differ for each browser and platform.  Things that look good in one combination may look terrible in all others.  This goes back to the most basic fundamental rule of making webpages:</p>
-<blockquote>Test your stuff on other browsers.</blockquote>
-<p>And I don't mean through browser stack or any of your fancy hipster tools. I mean on separate physical devices. Read the text, see if it's hard. If it is, change it.</p>
+<blockquote>Test your stuff in other browsers on other devices.</blockquote>
 
 <h4>4. Not everyone is a fresh-faced 19 year old</h4>
 <p>People have varying degrees of dyslexia which mean that reading for some requires much greater concentration than reading for others.</p>
 <p>The problem is that if a bunch of concentration is exhausted to interpret the hairline grey flicks you call letters, then there's not much left to be spent on trying to understand what you've written with it.</p>
-<p>Don't believe me? Well fuck you, you're wrong. Here's an <a href="http://www.radiolab.org/story/301401-inner-voices/">hour long radio show</a> explaining it. Still not enough? <a href=https://csusm-dspace.calstate.edu/handle/10211.3/114688>Here's a fucking thesis work on it</a>. Poor legibility decreases overall comprehension. This isn't rocket-science.
 
 <h3>Legibility is your top goal for content. Period. End of story.</h3>
 <p>So we have the following realities:</p>
