--- a/guide.html
+++ b/guide.html
@@ -7,15 +7,20 @@
 
 <h4>2. Not everyone is using your computer.</h4>
 <p>There are a wide variety of displays these days used in a wide variety of lighting conditions.</p>
-<p>Take any two random devices and put your grey-on-grey text website up against it.  See how the greys are strikingly different?  One of them is bluer, or greener, or lighter, or darker.  Notice how the contrast ratio between the black and white are different? Want to increase your convergence? Lower your bounce rate? Get those engagement numbers up? These are important details!</p>
+<p>Take any two random devices and put your grey-on-grey text website up against it.  See how the greys are strikingly different?  One of them is bluer, or greener, or lighter, or darker.  Notice how the contrast ratio between the black and white are different?</p> 
 
-<h4>3. Not everyone is using your operating system.</h4>
+<p>Want to increase your convergence? Lower your bounce rate? Get those engagement numbers up? Legibility is important!</p>
+
+<h4>3. Not everyone is using your operating system/browser.</h4>
 <p>Sub-pixel font aliasing engines differ for each browser and platform.  Things that look good in one combination may look terrible in all others.  This goes back to the most basic fundamental rule of making webpages:</p>
 <blockquote>Test your stuff in other browsers on other devices.</blockquote>
 
-<h4>4. Not everyone is a fresh-faced 19 year old</h4>
+<h4>4. Not everyone is a fresh-faced 19 year old.</h4>
 <p>People have varying degrees of dyslexia which mean that reading for some requires much greater concentration than reading for others.</p>
 <p>The problem is that if a bunch of concentration is exhausted to interpret the hairline grey flicks you call letters, then there's not much left to be spent on trying to understand what you've written with it.</p>
+
+<h4>5. Low contrast sites perform poorly.</h4>
+<p>A/B test it. I have.  Higher contrast = better performance.  CTA buttons, headlines, pitches, everything performs better with higher WCAG contrast - every time.  I can incrase your sales by double or triple digits with two words: <b>Increase Constrast</b>.  Really. </p>
 
 <h3>Legibility is your top goal for content. Period. End of story.</h3>
 <p>So we have the following realities:</p>
@@ -36,6 +41,7 @@
 </ul>
 
 <p>You will have more users better able to focus on your message without being distracted by your medium.</p>
+
 
 <h4>All This should have been obvious. See how easy this is to read without a style-sheet? It's already done for you.</h4>
 
