--- a/guide.html
+++ b/guide.html
@@ -43,6 +43,6 @@
 <p>You will have more users better able to focus on your message without being distracted by your medium.</p>
 
 
-<h4>All This should have been obvious. See how easy this is to read without a style-sheet? It's already done for you.</h4>
+<h4>All this should have been obvious. See how easy this is to read without a stylesheet? It's already done for you.</h4>
 
 <small>I'm not advocating for a world without stylesheets. I'm just saying that if your content is easier read without one you are an incompetent full-on-retard, that's all.</small>
