--- a/higher_contrast.html
+++ b/higher_contrast.html
@@ -18,3 +18,9 @@
 <h3><code>(function(){var m=document.body.appendChild(document.createElement('link'));m.rel='stylesheet';m.href='//unreadable.website/unfuckupify.css'})();</code></h3>
 
 <p>Ah, it makes life so much better. I can read shit.</p>
+
+<h2>Update</h2>
+
+<p>So the new idea I have is to have something like greasemonkey filters and some global accessible css page.  So the idea is that there'd
+be a drop down to create your own CSS overrides for some crappy site and then you can save it in a wiki like fashion so that other users can
+also experience a non-bullshit user-experience where they can decipher the content on the screen.</p>
